# Akinator

./: Akinator.cpp  Akinator.h  CMakeLists.txt  README.md  Tree.cpp  Tree.h  main.cpp
